--- a/app/views/gists/_form.html.erb
+++ b/app/views/gists/_form.html.erb
@@ -1,4 +1,19 @@
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+
+
+
 <%= form_for(@gist) do |f| %>
+
+<% lex = Pygments::Lexer.all.select{|y| !(y.filenames.empty?)}.map{|x|[x.name, x.filenames.first.gsub('*','')]}.sort %>
+<%
+  all_lexers = Pygments.lexers.flatten.select.with_index(offset = 0) { |x,i| i % 2 == 0 }.sort
+  all_lexers = all_lexers.delete_if { |x| x =~ /.\s./ }
+  all_lexers = all_lexers.map { |x| x.downcase }
+%>
+
   <% if @gist.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@gist.errors.count, "error") %> prohibited this gist from being saved:</h2>
@@ -13,11 +28,11 @@
 
   <div class="field">
     <%= f.label :snippet %><br>
-    <%= f.text_area :snippet %>
+    <%= f.text_area :snippet, :size => "100x10" %>
   </div>
   <div class="field">
     <%= f.label :lang %><br>
-    <%= f.text_field :lang %>
+    <%= f.select :lang, all_lexers %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
