--- a/app/views/gists/edit.html.erb
+++ b/app/views/gists/edit.html.erb
@@ -1,3 +1,13 @@
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+
+<div class="header bg-primary">
+<a href="/gists" class="btn btn-primary btn-lg active" role="button"> Main Page</a>
+<a href="https://github.com/mmaciejewski/my_gists_rework" class="btn btn-primary btn-lg active" role="button"> Github</a>
+</div>
+
 <h1>Editing gist</h1>
 
 <%= render 'form' %>
