--- a/app/views/gists/show.html.erb
+++ b/app/views/gists/show.html.erb
@@ -4,8 +4,8 @@
 
 
 <div class="header bg-primary">
-<a href="/gists" class="btn btn-primary btn-lg active" role="button"> Main Page</a>
-<a href="https://github.com/mmaciejewski/my_gists_rework" class="btn btn-primary btn-lg active" role="button"> Github</a>
+<a href="/gists" class="btn btn-warning btn-lg active" role="button"> Main Page</a>
+<a href="https://github.com/mmaciejewski/my_gists_rework" class="btn btn-warning btn-lg active" role="button"> Github</a>
 </div>
 
 <div class="main">
