--- a/app/views/gists/edit.html.erb
+++ b/app/views/gists/edit.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="header bg-primary">
-<a href="/gists" class="btn btn-warning btn-lg active" role="button"> Main Page</a>
+<a href="/" class="btn btn-warning btn-lg active" role="button"> Main Page</a>
 <a href="https://github.com/mmaciejewski/my_gists_rework" class="btn btn-warning btn-lg active" role="button"> Github</a>
 </div>
 
@@ -13,4 +13,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @gist %> |
-<%= link_to 'Back', gists_path %>
+<a href="/"> Back</a>
+
