--- a/app/views/gists/show.html.erb
+++ b/app/views/gists/show.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="header bg-primary">
-<a href="/gists" class="btn btn-warning btn-lg active" role="button"> Main Page</a>
+<a href="/" class="btn btn-warning btn-lg active" role="button"> Main Page</a>
 <a href="https://github.com/mmaciejewski/my_gists_rework" class="btn btn-warning btn-lg active" role="button"> Github</a>
 </div>
 
@@ -30,6 +30,6 @@
 </p>
 
 <%= link_to 'Edit', edit_gist_path(@gist) %> |
-<%= link_to 'Back', gists_path %>
+<a href="/"> Back</a>
 
 </div>
