--- a/app/views/gists/new.html.erb
+++ b/app/views/gists/new.html.erb
@@ -6,7 +6,7 @@
 
 
 <div class="header bg-primary">
-<a href="/gists" class="btn btn-warning btn-lg active" role="button"> Main Page</a>
+<a href="/" class="btn btn-warning btn-lg active" role="button"> Main Page</a>
 <a href="https://github.com/mmaciejewski/my_gists_rework" class="btn btn-warning btn-lg active" role="button"> Github</a>
 </div>
 
@@ -15,4 +15,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', gists_path %>
+<a href="/"> Back</a>
