--- a/app/views/gists/new.html.erb
+++ b/app/views/gists/new.html.erb
@@ -5,9 +5,8 @@
 
 
 
-<div class="header bg-primary">
+<div>
 <a href="/" class="btn btn-warning btn-lg active" role="button"> Main Page</a>
-<a href="https://github.com/mmaciejewski/my_gists_rework" class="btn btn-warning btn-lg active" role="button"> Github</a>
 </div>
 
 
