--- a/app/views/gists/edit.html.erb
+++ b/app/views/gists/edit.html.erb
@@ -3,9 +3,8 @@
 </head>
 
 
-<div class="header bg-primary">
+<div>
 <a href="/" class="btn btn-warning btn-lg active" role="button"> Main Page</a>
-<a href="https://github.com/mmaciejewski/my_gists_rework" class="btn btn-warning btn-lg active" role="button"> Github</a>
 </div>
 
 <h1>Editing gist</h1>
